src/test/ui/traits/trait-upcasting/type-checking-test-1.stderr
error[E0605]: non-primitive cast: `&dyn Foo` as `&dyn Bar<_>`
  --> $DIR/type-checking-test-1.rs:17:13
   |
LL |     let _ = x as &dyn Bar<_>; // Ambiguous
   |             ^^^^^^^^^^^^^^^^ invalid cast
   |
help: consider borrowing the value
   |
LL |     let _ = &x as &dyn Bar<_>; // Ambiguous
   |             +

error[E0277]: the trait bound `&dyn Foo: Bar<_>` is not satisfied
  --> $DIR/type-checking-test-1.rs:17:13
   |
LL |     let _ = x as &dyn Bar<_>; // Ambiguous
   |             ^ the trait `Bar<_>` is not implemented for `&dyn Foo`
   |
   = note: required for the cast to the object type `dyn Bar<_>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0605.
For more information about an error, try `rustc --explain E0277`.
